fixed shortcode styles to reduce whitespace in page.

--- a/wp-content/themes/jarvis_wp/css/shortcodes.css
+++ b/wp-content/themes/jarvis_wp/css/shortcodes.css
@@ -278,8 +278,8 @@ alert-message.info a, .alert.info a {
 /*	FULL WIDTH BLOCK
 /*--------------------------------------------------------------------------*/
 .full-width {
-	padding: 50px 0 20px;
-	margin: 30px 0;
+	padding: 30px 0;
+	margin: 0;
 	width:100%;
 }
 /*---------------------------------------------------------------------------*/
